--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.therore.kata</groupId>
   <artifactId>kata-jgitflow</artifactId>
-  <version>1.1.1-SNAPSHOT</version>
+  <version>1.1.0</version>
   <packaging>pom</packaging>
   <name>kata-jgitflow</name>
   <modules>
