--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,13 @@
 		<repository>
 			<id>repository</id>
 			<name>Repository</name>
-			<url>file://${user.home}/.m2/repository</url>
+			<url>file://home/ananth/.m2/repository</url>
 		</repository>
 				
 		<snapshotRepository>
 			<id>snapshot-repository</id>
 			<name>Snapshot Repository</name>
-			<url>file://${user.home}/.m2/repository</url>
+			<url>file://home/ananth/.m2/repository</url>
 		</snapshotRepository>
 	</distributionManagement>
 
