--- a/submodule/pom.xml
+++ b/submodule/pom.xml
@@ -11,6 +11,18 @@
   <version>1.1.0</version>
   <name>kata-jgitflow-submodule</name>
   <url>http://maven.apache.org</url>
+  <build>
+    <plugins>
+        <plugin>
+            <groupId>external.atlassian.jgitflow</groupId>
+            <artifactId>jgitflow-maven-plugin</artifactId>
+            <version>1.0-m5.1</version>
+            <configuration>
+                <!-- see goals wiki page for configuration options -->
+            </configuration>
+        </plugin>
+    </plugins>
+ </build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
