--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,18 @@
   <version>1.1.0</version>
   <packaging>pom</packaging>
   <name>kata-jgitflow</name>
+<build>
+    <plugins>
+        <plugin>
+            <groupId>external.atlassian.jgitflow</groupId>
+            <artifactId>jgitflow-maven-plugin</artifactId>
+            <version>1.0-m5.1</version>
+            <configuration>
+                <!-- see goals wiki page for configuration options -->
+            </configuration>
+        </plugin>
+    </plugins>
+ </build>
   <modules>
     <module>submodule</module>
   </modules>
